# iterate_swarm

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  Makefile  README.md  docker-compose.yml  prd.md
.next/: trace  trace-build
ai_service/: .env  .env.example  pyproject.toml
ai_service/.deepeval/: .deepeval_telemetry.txt
ai_service/infra/supabase/: schema.sql
ai_service/src/: main.py
ai_service/src/agents/: spec.py  triage.py
ai_service/src/api/: issues.py  webhooks.py
ai_service/src/client/: callback.py
ai_service/src/core/: config.py
ai_service/src/inngest/: client.py  functions.py  serve.py
ai_service/src/schemas/: ingestion.py
ai_service/src/services/: github.py  kafka.py  qdrant.py  supabase.py
ai_service/tests/: conftest.py  integration_kafka.py  test_agents_logic.py  test_approval_flow.py  test_callback.py  test_spec.py  test_triage.py  test_webhooks.py
ai_service/tests/evals/: __init__.py  test_triage_accuracy.py
apps/ai/: config.yaml  pyproject.toml
apps/ai/src/: grpc_server.py  main.py  worker.py
apps/core/: go.mod  go.sum
fullstack/: package.json  playwright.config.ts  pnpm-lock.yaml
fullstack/components/: error-boundary.tsx
fullstack/components/ui/: textarea.tsx
fullstack/e2e/: debug-triage.spec.ts  triage.spec.ts
fullstack/prisma/: schema.prisma  seed.ts
fullstack/scripts/: test-loop.ts
fullstack/src/: middleware.ts
fullstack/src/__tests__/: api.test.ts
fullstack/src/app/: globals.css  layout.tsx  page.tsx
fullstack/src/server/: db.ts
infra/supabase/: schema.sql
scripts/: check-infra.sh
(+38 files in other folders)
