[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.8.3",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "inngest>=0.5.15",
    "langchain-openai>=1.1.7",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
